--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -70,12 +70,13 @@
 @media screen and (max-width: 768px) {
   .navbar-links {
     position: absolute;
-    top: 64px;
+    top: 100%;
     right: 0;
     background-color: #6f42c1;
     flex-direction: column;
     align-items: flex-start;
-    width: 100%;
+    margin-right: 5px;
+    width: 90%;
     padding: 16px;
     display: none;
   }
